--- a/nmarket.ipynb
+++ b/nmarket.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c7f913ad",
+   "id": "6423e262",
    "metadata": {
     "toc": true
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Исследование-объектов-Нмаркет-Про\" data-toc-modified-id=\"Исследование-объектов-Нмаркет-Про-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Исследование объектов Нмаркет Про</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Исследование-объектов-Нмаркет-Про\" data-toc-modified-id=\"Исследование-объектов-Нмаркет-Про-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Исследование объектов Нмаркет Про</a></span><ul class=\"toc-item\"><li><span><a href=\"#Проверка-дубликатов\" data-toc-modified-id=\"Проверка-дубликатов-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Проверка дубликатов</a></span></li></ul></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b2357a37",
+   "id": "af6a0db6",
    "metadata": {},
    "source": [
     " # Исследование объектов Нмаркет Про"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9917e8",
+   "id": "7c9fcd19",
    "metadata": {},
    "source": [
     "Задачи исследования\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58f189d4",
+   "id": "02763688",
    "metadata": {},
    "source": [
     "Импортируем необходимые библиотеки"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c9746bf8",
+   "id": "90a2b45e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2039aaae",
+   "id": "d1176826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "557013ba",
+   "id": "e57ef9c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b8cb462b",
+   "id": "5fcaf174",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04203a15",
+   "id": "954e29b2",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8a9f0494",
+   "id": "65ae3896",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "05072f1e",
+   "id": "c6e42941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "82732006",
+   "id": "4ea956d8",
    "metadata": {},
    "outputs": [
     {
@@ -534,9 +534,312 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b0caf2e",
+   "metadata": {},
+   "source": [
+    "## Проверка дубликатов"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3561a356",
+   "metadata": {},
+   "source": [
+    "Проверим соответствия между районами"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7085685c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan 'Тосненский район' 'Всеволожский район' 'Петродворцовый район'\n",
+      " 'Приморский район' 'Пушкинский район' 'Гатчинский район'\n",
+      " 'Ломоносовский район' 'Колпинский район']\n",
+      "\n",
+      "['Калининский' 'Московский' 'Выборгский' 'Всеволожский' nan\n",
+      " 'Красногвардейский' 'Адмиралтейский' 'Приморский' 'Фрунзенский'\n",
+      " 'Кировский' 'Красносельский' 'Гатчинский']\n",
+      "\n",
+      "['Калининский' 'Московский' 'Выборгский' 'Всеволожский' 'Тосненский'\n",
+      " 'Красногвардейский' 'Адмиралтейский' 'Приморский' 'Петродворцовый'\n",
+      " 'Пушкинский' 'Фрунзенский' 'Гатчинский' 'Кировский' 'Красносельский'\n",
+      " 'Ломоносовский' 'Колпинский']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.district.unique())\n",
+    "print()\n",
+    "print(df.sub_locality_name.unique())\n",
+    "print()\n",
+    "print(df.non_admin_sub_locality.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "34517fea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.district = df.district.fillna(' район')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a2f74ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.district = df.district.apply(lambda x: x.replace(' район', '', 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d99640e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sub_locality_name = df.sub_locality_name.fillna('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "987edd12",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "data = {'district': df['district'], 'sub_locality_name': df['sub_locality_name'],\n",
+    "        'non_admin_sub_locality': df['non_admin_sub_locality']}\n",
+    "df2 = pd.DataFrame.from_dict(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "33244840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2005, 3)\n",
+      "(0, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df2[df2['district']!=df2['sub_locality_name']].shape)\n",
+    "print(df2[df2['district']==df2['sub_locality_name']].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "db0ec304",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>district</th>\n",
+       "      <th>sub_locality_name</th>\n",
+       "      <th>non_admin_sub_locality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td>Калининский</td>\n",
+       "      <td>Калининский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>Калининский</td>\n",
+       "      <td>Калининский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>Калининский</td>\n",
+       "      <td>Калининский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td></td>\n",
+       "      <td>Калининский</td>\n",
+       "      <td>Калининский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>Калининский</td>\n",
+       "      <td>Калининский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>Колпинский</td>\n",
+       "      <td></td>\n",
+       "      <td>Колпинский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>Колпинский</td>\n",
+       "      <td></td>\n",
+       "      <td>Колпинский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>Колпинский</td>\n",
+       "      <td></td>\n",
+       "      <td>Колпинский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003</th>\n",
+       "      <td>Колпинский</td>\n",
+       "      <td></td>\n",
+       "      <td>Колпинский</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004</th>\n",
+       "      <td>Колпинский</td>\n",
+       "      <td></td>\n",
+       "      <td>Колпинский</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2005 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        district sub_locality_name non_admin_sub_locality\n",
+       "0                      Калининский            Калининский\n",
+       "1                      Калининский            Калининский\n",
+       "2                      Калининский            Калининский\n",
+       "3                      Калининский            Калининский\n",
+       "4                      Калининский            Калининский\n",
+       "...          ...               ...                    ...\n",
+       "2000  Колпинский                               Колпинский\n",
+       "2001  Колпинский                               Колпинский\n",
+       "2002  Колпинский                               Колпинский\n",
+       "2003  Колпинский                               Колпинский\n",
+       "2004  Колпинский                               Колпинский\n",
+       "\n",
+       "[2005 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[df2['district']!=df2['sub_locality_name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "e3c91d44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "район содержится также в sub_locality_name ['', 'Всеволожский', 'Приморский', 'Гатчинский']\n",
+      "район содержится только в disrict ['Тосненский', 'Петродворцовый', 'Пушкинский', 'Ломоносовский', 'Колпинский']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_disrict = []\n",
+    "lst_sub_locality_name = []\n",
+    "for disrict in df.district.unique():\n",
+    "    if disrict in df.sub_locality_name.unique():\n",
+    "        lst_disrict.append(disrict)\n",
+    "    else:\n",
+    "        lst_sub_locality_name.append(disrict)\n",
+    "\n",
+    "print('район содержится также в sub_locality_name', lst_disrict)\n",
+    "print('район содержится только в disrict', lst_sub_locality_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "836f6436",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Калининский\n",
+      "Московский\n",
+      "Выборгский\n",
+      "Всеволожский\n",
+      "Красногвардейский\n",
+      "Адмиралтейский\n",
+      "Приморский\n",
+      "Фрунзенский\n",
+      "Кировский\n",
+      "Красносельский\n",
+      "Гатчинский\n"
+     ]
+    }
+   ],
+   "source": [
+    "for disrict in df.sub_locality_name.unique():\n",
+    "    if disrict in df.non_admin_sub_locality.unique():\n",
+    "        print(disrict)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0783d58c",
+   "id": "b97e4df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4484624f",
+   "id": "5b0399fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "40c4e768",
+   "id": "a9b236bb",
    "metadata": {
     "scrolled": false
    },
@@ -1835,7 +2138,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "202df3e7",
+   "id": "9de58981",
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "56e98b8e",
+   "id": "ad3c48de",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +2182,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a72edb33",
+   "id": "3037c1c1",
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +2210,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0d8de29a",
+   "id": "c659b935",
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +2231,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c182d300",
+   "id": "68cab810",
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +2252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f493ca05",
+   "id": "63b58822",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1983,9 +2286,9 @@
    "title_sidebar": "Contents",
    "toc_cell": true,
    "toc_position": {
-    "height": "calc(100% - 180px)",
-    "left": "10px",
-    "top": "150px",
+    "height": "560px",
+    "left": "35px",
+    "top": "66px",
     "width": "288px"
    },
    "toc_section_display": true,
